examples/shop/recommendations/app-repo/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: recommendations
  labels:
    istio.io/rev: asm-managed
