examples/shop/recommendations/app-repo/k8s/base/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
    name: recommendations-virtualservice
    namespace: recommendations
spec:
    hosts:
    - recommendations.recommendations.svc.cluster.local
    gateways:
    - asm-ingress-gw/asm-ingressgateway
    http:
    - route:
      - destination:
          host: recommendations
          port:
            number: 80
